AGAIN GAP FIXING

--- a/_sass/layout/_base.scss
+++ b/_sass/layout/_base.scss
@@ -37,6 +37,7 @@ h1 {
 }
 
 h2 {
+  margin: 0.5em 0 0.5em;
   font-size: $type-size-4;
 }
 
